@@ -1,3 +1,8 @@
+ Summary of important user-visible changes for dicom 0.2.0+ (XXXX/XX/XX):
+-------------------------------------------------------------------------
+
+ ** added checks for depreciated functions, using config.h 
+
  Summary of important user-visible changes for dicom 0.2.0 (2017/02/20):
 -------------------------------------------------------------------------
 
